add a new custom message serializer for bus to overcome a large collection.
--HG--
branch : Release 7.1.358

--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -165,7 +165,7 @@
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidatorTest.cs" />
     <Compile Include="Forecasting\Import\ForecastFileTest.cs" />
     <Compile Include="Forecasting\Import\ForecastsFileContentProviderTest.cs" />
-    <Compile Include="Forecasting\Import\ForecastsFileRowTest.cs" />
+    <Compile Include="Forecasting\Import\ForecastsRowTest.cs" />
     <Compile Include="Forecasting\Import\ForecastsRowExtractorTest.cs" />
     <Compile Include="Forecasting\MultisiteDayCloneIssueTest.cs" />
     <Compile Include="Forecasting\OpenForWorkTest.cs" />
