--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Forecast\ExportMultisiteSkillsToSkillConsumer.cs" />
     <Compile Include="Forecast\ExportMultisiteSkillToSkillConsumer.cs" />
     <Compile Include="Forecast\JobResultFeedback.cs" />
+    <Compile Include="Forecast\LargeForecastsRowCollectionSerializer.cs" />
     <Compile Include="Forecast\OpenAndSplitTargetSkillConsumer.cs" />
     <Compile Include="Forecast\SendImportForecastBusMessage.cs" />
     <Compile Include="Forecast\WorkloadDayOpenHoursDictionary.cs" />
