Added signalR to project

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
@@ -3,7 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
-<configuration> 
+<configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <sectionGroup name="elmah">
@@ -13,11 +13,11 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
   </configSections>
-  <log4net> 
+  <log4net>
     <root>
       <!--<appender-ref ref="EventLogAppender" />-->
       <appender-ref ref="RollingFileAppender" />
-      <level value="ERROR" /> 
+      <level value="ERROR" />
     </root>
     <logger name="Teleopti.Ccc.Web">
       <level value="WARN" />
@@ -42,17 +42,17 @@
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="nhibConfPath" value="bin" />
   </appSettings>
-  <system.web> 
+  <system.web>
     <httpModules>
       <add name="Log4NetModule" type="Teleopti.Ccc.Web.Core.Logging.Log4NetModule, Teleopti.Ccc.Web" />
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
-    <compilation targetFramework="4.0" debug="true"> 
+    <compilation targetFramework="4.0" debug="true">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -63,7 +63,7 @@
     </compilation>
     <authentication mode="Windows">
       <forms requireSSL="false" />
-    </authentication> 
+    </authentication>
     <!--
 		<authentication mode="Forms"> 
       <forms requireSSL="false" loginUrl="~/Authentication/SignIn" />
@@ -81,9 +81,9 @@
       </namespaces>
     </pages>
     <globalization culture="auto" uiCulture="auto" />
-		<customErrors mode="Off" defaultRedirect="~/content/error/error.htm">
-			<error statusCode="404" redirect="~/content/error/404.htm"/>
-		</customErrors>
+    <customErrors mode="Off" defaultRedirect="~/content/error/error.htm">
+      <error statusCode="404" redirect="~/content/error/404.htm" />
+    </customErrors>
     <httpHandlers>
       <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
     </httpHandlers>
@@ -100,18 +100,22 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,DELETE,PUT" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
     </handlers>
-		<httpProtocol>
-			<customHeaders>
-				<clear />
-				<add name="X-UA-Compatible" value="IE=edge" />
-			</customHeaders>
-		</httpProtocol>
-	</system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <add name="X-UA-Compatible" value="IE=edge" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.8.0" newVersion="4.0.8.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
