--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
@@ -8,5 +8,11 @@
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="log4net" version="1.2.11" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="1.7" />
+  <package id="Newtonsoft.Json" version="4.0.8" />
+  <package id="SignalR" version="0.4.0" />
+  <package id="SignalR.Hosting.AspNet" version="0.4.0.0" />
+  <package id="SignalR.Js" version="0.4.0.1" />
+  <package id="SignalR.Server" version="0.4.0.0" />
 </packages>
