--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
@@ -86,6 +86,8 @@
   <ItemGroup>
     <Compile Include="Common\AlarmEventArgs.cs" />
     <Compile Include="Common\IConfigurationHandler.cs" />
+    <Compile Include="Common\IEtlRunningInformation.cs" />
+    <Compile Include="Common\IRunControllerRepository.cs" />
     <Compile Include="Common\PmPermissionType.cs" />
     <Compile Include="PerformanceManager\IPmPermissionExtractor.cs" />
     <Compile Include="PerformanceManager\IPMService.cs" />
