--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Teleopti.Ccc.Sdk.Host.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Teleopti.Ccc.Sdk.Host.csproj
@@ -166,6 +166,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Ioc\AssemblerModule.cs" />
     <Compile Include="Ioc\RequestFactoryModule.cs" />
+    <Compile Include="Ioc\ShiftTradeValidationModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SdkState.cs" />
     <Compile Include="SendDenormalizeNotificationToBus.cs" />
