--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerInfrastructure/Teleopti.Analytics.Etl.TransformerInfrastructure.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerInfrastructure/Teleopti.Analytics.Etl.TransformerInfrastructure.csproj
@@ -88,58 +88,58 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RequestInfrastructure.cs" />
-    <Compile Include="OvertimeInfrastructure.cs" />
-    <Compile Include="SkillInfrastructure.cs" />
-    <Compile Include="GroupPagePersonInfrastructure.cs" />
-    <Compile Include="PmUserInfrastructure.cs" />
-    <Compile Include="DayOffInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\RequestInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\OvertimeInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\SkillInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\GroupPagePersonInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\PmUserInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\DayOffInfrastructure.cs" />
     <Compile Include="CubeRepository.cs" />
-    <Compile Include="ActivityInfrastructure.cs" />
-    <Compile Include="AbsenceInfrastructure.cs" />
-    <Compile Include="AcdLogOnPersonInfrastructure.cs" />
-    <Compile Include="BusinessUnitInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ActivityInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\AbsenceInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\AcdLogOnPersonInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\BusinessUnitInfrastructure.cs" />
     <Compile Include="ILogOnHelper.cs" />
     <Compile Include="IThreadPool.cs" />
     <Compile Include="LicenseActivator.cs" />
-    <Compile Include="ScheduleDayAbsenceCountInfrastructure.cs" />
-    <Compile Include="ScheduleDayOffCountInfrastructure.cs" />
-    <Compile Include="SchedulePreferenceInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScheduleDayAbsenceCountInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScheduleDayOffCountInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\SchedulePreferenceInfrastructure.cs" />
     <Compile Include="ScheduleTransformerException.cs" />
-    <Compile Include="UserInfrastructure.cs" />
-    <Compile Include="PersonSkillInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\UserInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\PersonSkillInfrastructure.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="PermissionReportInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\PermissionReportInfrastructure.cs" />
     <Compile Include="RaptorRepositoryStub.cs" />
-    <Compile Include="KpiTargetTeamInfrastructure.cs" />
-    <Compile Include="ScorecardKpiInfrastructure.cs" />
-    <Compile Include="ScorecardInfrastructure.cs" />
-    <Compile Include="KpiInfrastructure.cs" />
-    <Compile Include="ScheduleInfrastructure.cs" />
-    <Compile Include="DateInfrastructure.cs" />
-    <Compile Include="ForecastWorkloadInfrastructure.cs" />
-    <Compile Include="ScheduleForecastSkillInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\KpiTargetTeamInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScorecardKpiInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScorecardInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\KpiInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScheduleInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\DateInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ForecastWorkloadInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScheduleForecastSkillInfrastructure.cs" />
     <Compile Include="GeneralInfrastructure.cs" />
     <Compile Include="IGeneralInfrastructure.cs" />
-    <Compile Include="IntervalInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\IntervalInfrastructure.cs" />
     <Compile Include="LogonHelper.cs" />
     <Compile Include="BulkWriter.cs" />
     <Compile Include="DB.cs" />
     <Compile Include="HelperFunctions.cs" />
     <Compile Include="IDb.cs" />
     <Compile Include="LogonService.cs" />
-    <Compile Include="PersonInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\PersonInfrastructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RaptorRepository.cs" />
-    <Compile Include="ScenarioInfrastructure.cs" />
-    <Compile Include="ShiftCategoryInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ScenarioInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\ShiftCategoryInfrastructure.cs" />
     <Compile Include="StateManager.cs" />
     <Compile Include="ThreadPool.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TimeZoneInfrastructure.cs" />
-    <Compile Include="WorkloadInfrastructure.cs" />
-    <Compile Include="WorkloadQueueInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\TimeZoneInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\WorkloadInfrastructure.cs" />
+    <Compile Include="DataTableDefinition\WorkloadQueueInfrastructure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
