--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerInfrastructure/Teleopti.Analytics.Etl.TransformerInfrastructure.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerInfrastructure/Teleopti.Analytics.Etl.TransformerInfrastructure.csproj
@@ -99,6 +99,8 @@
     <Compile Include="DataTableDefinition\AbsenceInfrastructure.cs" />
     <Compile Include="DataTableDefinition\AcdLogOnPersonInfrastructure.cs" />
     <Compile Include="DataTableDefinition\BusinessUnitInfrastructure.cs" />
+    <Compile Include="EtlJobLock.cs" />
+    <Compile Include="IEtlJobLock.cs" />
     <Compile Include="ILogOnHelper.cs" />
     <Compile Include="IThreadPool.cs" />
     <Compile Include="LicenseActivator.cs" />
