--- a/Teleopti.Ccc.IocCommon/packages.config
+++ b/Teleopti.Ccc.IocCommon/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="1.2.11" />
+  <package id="MbCache" version="1.0.0-CR1" />
 </packages>
