--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Web.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
 	Note: As an alternative to hand editing this file you can use the 
 	web admin tool to configure settings for your application. Use
@@ -110,44 +110,44 @@
 			<error statusCode="404" redirect="FileNotFound.htm" />
 		</customErrors>
 		-->
-	<pages>
-	  <controls>
-		<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	  </controls>
-	</pages>
-	<httpHandlers>
-	  <remove verb="*" path="*.asmx" />
-	  <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	  <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	  <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
-	</httpHandlers>
-	<httpModules>
-	  <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	</httpModules>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </controls>
+    </pages>
+    <httpHandlers>
+      <remove verb="*" path="*.asmx" />
+      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
+    </httpHandlers>
+    <httpModules>
+      <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    </httpModules>
   </system.web>
   <system.codedom>
-	<compilers>
-	  <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<providerOption name="CompilerVersion" value="v3.5" />
-		<providerOption name="WarnAsError" value="false" />
-	  </compiler>
-	</compilers>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <providerOption name="CompilerVersion" value="v3.5" />
+        <providerOption name="WarnAsError" value="false" />
+      </compiler>
+    </compilers>
   </system.codedom>
   <!--
 		The system.webServer section is required for running ASP.NET AJAX under Internet
 		Information Services 7.0.  It is not necessary for previous version of IIS.
 	-->
   <system.webServer>
-	<validation validateIntegratedModeConfiguration="false" />
-	<modules>
-	  <add name="ScriptModule" preCondition="integratedMode" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	</modules>
-	<handlers>
-	  <remove name="WebServiceHandlerFactory-Integrated" />
-	  <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	  <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	  <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-	</handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <add name="ScriptModule" preCondition="integratedMode" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    </modules>
+    <handlers>
+      <remove name="WebServiceHandlerFactory-Integrated" />
+      <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    </handlers>
   </system.webServer>
   <!-- uncomment this if you want to log WCF communication (to get the complete log, you have to flush it by closing the host)
   <system.diagnostics>
@@ -175,84 +175,83 @@
   </system.diagnostics>
   -->
   <system.serviceModel>
-	<!-- uncomment this if you want to log WCF communication messages
+    <!-- uncomment this if you want to log WCF communication messages
 	<diagnostics>
 	  <messageLogging logEntireMessage="true" logMalformedMessages="true"
 		logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
 	</diagnostics>
 	-->
-<extensions>
-<!--<behaviorExtensions>
+    <extensions>
+      <!--<behaviorExtensions>
   <add name="wsdlExtensions" type="WCFExtras.Wsdl.WsdlExtensionsConfig, WCFExtras, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
 </behaviorExtensions>-->
-</extensions>
-	<services>
-	  <service behaviorConfiguration="Host2.TeleoptiCccSdkServiceBehavior" name="Teleopti.Ccc.Sdk.WcfService.TeleoptiCccSdkService">
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" name="TeleoptiCccSdkService" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccSdkService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" name="TeleoptiCccLogOnService" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccLogOnService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiForecastingService" name="TeleoptiForecastingService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiSchedulingService" name="TeleoptiSchedulingService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiOrganizationService" name="TeleoptiOrganizationService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccSdkInternal" name="TeleoptiOrganizationService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
-		  <identity>
-			<dns value="localhost" />
-		  </identity>
-		</endpoint>
-		<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-	  </service>
-	</services>
-	<bindings>
-	  <basicHttpBinding>
-		<binding name="basicHttpBinding_withSize" maxReceivedMessageSize="10000000" maxBufferSize="10000000">
-		  <security mode="TransportCredentialOnly">
-			<transport clientCredentialType="Ntlm" />
-		  </security>
-		</binding>
-	  </basicHttpBinding>
-	</bindings>
-	<behaviors>
+    </extensions>
+    <services>
+      <service behaviorConfiguration="Host2.TeleoptiCccSdkServiceBehavior" name="Teleopti.Ccc.Sdk.WcfService.TeleoptiCccSdkService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" name="TeleoptiCccSdkService" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccSdkService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" name="TeleoptiCccLogOnService" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccLogOnService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiForecastingService" name="TeleoptiForecastingService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiSchedulingService" name="TeleoptiSchedulingService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiOrganizationService" name="TeleoptiOrganizationService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_withSize" contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccSdkInternal" name="TeleoptiOrganizationService" behaviorConfiguration="Sample.WsdlSampleEndpointBehavior" bindingNamespace="http://schemas.ccc.teleopti.com/sdk/2010/04/">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="basicHttpBinding_withSize" maxReceivedMessageSize="10000000" maxBufferSize="10000000">
+          <security mode="TransportCredentialOnly">
+            <transport clientCredentialType="Ntlm" />
+          </security>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <behaviors>
       <endpointBehaviors>
         <behavior name="Sample.WsdlSampleEndpointBehavior">
-<!--<wsdlExtensions location="http://localhost:1335/teleopticccsdkservice.svc" singleFile="true"/>-->
+          <!--<wsdlExtensions location="http://localhost:1335/teleopticccsdkservice.svc" singleFile="true"/>-->
         </behavior>
       </endpointBehaviors>
-
-	  <serviceBehaviors>
-		<behavior name="Host2.TeleoptiCccSdkServiceBehavior">
-		  <serviceMetadata httpGetEnabled="true" />
-		  <serviceDebug includeExceptionDetailInFaults="true" />
-      <serviceAuthorization principalPermissionMode="Custom" serviceAuthorizationManagerType="Teleopti.Ccc.Sdk.WcfService.LogOn.CustomAuthorizationManager, Teleopti.Ccc.Sdk.WcfSdkService">
-        <!-- 
+      <serviceBehaviors>
+        <behavior name="Host2.TeleoptiCccSdkServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceAuthorization principalPermissionMode="Custom" serviceAuthorizationManagerType="Teleopti.Ccc.Sdk.WcfService.LogOn.CustomAuthorizationManager, Teleopti.Ccc.Sdk.WcfSdkService">
+            <!-- 
           The serviceAuthorization behavior allows one to specify custom authorization policies.
           -->
-        <authorizationPolicies>
-          <add policyType="Teleopti.Ccc.Sdk.WcfService.LogOn.ClaimSetAuthorizationPolicy, Teleopti.Ccc.Sdk.WcfSdkService"/>
-        </authorizationPolicies>
-      </serviceAuthorization>
-      <dataContractSerializer maxItemsInObjectGraph="2147483646" />
-		</behavior>
-	  </serviceBehaviors>
-	</behaviors>
+            <authorizationPolicies>
+              <add policyType="Teleopti.Ccc.Sdk.WcfService.LogOn.ClaimSetAuthorizationPolicy, Teleopti.Ccc.Sdk.WcfSdkService" />
+            </authorizationPolicies>
+          </serviceAuthorization>
+          <dataContractSerializer maxItemsInObjectGraph="2147483646" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
   </system.serviceModel>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
