--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/packages.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="2.5.2.830" />
+  <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="1.2.11" />
+  <package id="MbCache" version="1.0.0-CR1" />
   <package id="PowerThreading" version="20101026.0" />
   <package id="Rhino.PersistentHashTable" version="1.7.0.0" />
   <package id="Rhino.Queues" version="1.4.2.0" />
