--- a/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
+++ b/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
@@ -107,13 +107,11 @@
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=4.0.3.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\SignalR\2.0\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.0.7.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.4.0.7\lib\net20\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="SignalR.Client.20, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9e7932cdbb39c45f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\SignalR\2.0\SignalR.Client.20.dll</HintPath>
+    <Reference Include="SignalR.Client.20, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0259a897762d58c9, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SignalR.Client.20.0.5.0\lib\net20\SignalR.Client.20.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -323,6 +321,7 @@
     <None Include="ClassDiagrams\CodersClassDiagram.cd" />
     <None Include="ClassDiagrams\DALClassDiagram.cd" />
     <None Include="ClassDiagrams\EventsClassDiagram.cd" />
+    <None Include="packages.config" />
     <None Include="Teleopti.Messaging.pfx" />
   </ItemGroup>
   <ItemGroup>
