--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
@@ -9,4 +9,5 @@
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="log4net" version="1.2.11" />
   <package id="Modernizr" version="1.7" />
+  <package id="Newtonsoft.Json" version="4.5.2" />
 </packages>
