Changing type of include for packages.config.
--HG--
branch : Release 7.1.358

--- a/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
+++ b/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
@@ -321,7 +321,7 @@
     <None Include="ClassDiagrams\CodersClassDiagram.cd" />
     <None Include="ClassDiagrams\DALClassDiagram.cd" />
     <None Include="ClassDiagrams\EventsClassDiagram.cd" />
-    <None Include="packages.config" />
+    <Content Include="packages.config" />
     <None Include="Teleopti.Messaging.pfx" />
   </ItemGroup>
   <ItemGroup>
