Remove WorkingDirectory from nuget.targets
--HG--
branch : Release 7.1.358

--- a/.nuget/NuGet.targets
+++ b/.nuget/NuGet.targets
@@ -42,13 +42,11 @@
     <Target Name="RestorePackages" DependsOnTargets="CheckPrerequisites">
         <Exec Command="$(RestoreCommand)"
               LogStandardErrorAsError="true"
-              Condition="Exists('$(PackagesConfig)')"
-              WorkingDirectory="$(NuGetToolsPath)" />
+              Condition="Exists('$(PackagesConfig)')"/>
     </Target>
 
     <Target Name="BuildPackage" DependsOnTargets="CheckPrerequisites">
         <Exec Command="$(BuildCommand)"
-              LogStandardErrorAsError="true"
-              WorkingDirectory="$(NuGetToolsPath)" />
+              LogStandardErrorAsError="true"/>
     </Target>
 </Project>
