--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus.Host/App.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus.Host/App.config
@@ -36,6 +36,14 @@
         <assemblyIdentity name="Rhino.Queues" publicKeyToken="0b3305902db7183f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.4.2.0" newVersion="1.4.2.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.1.841" newVersion="2.6.1.841" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Rhino.ServiceBus" publicKeyToken="0b3305902db7183f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
