--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.1.841" />
   <package id="log4net" version="1.2.11" />
   <package id="MvcContrib.Mvc3.TestHelper-ci" version="3.0.96.0" />
   <package id="MvcContrib.Mvc3.WatiN-ci" version="3.0.96.0" />
