--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -90,8 +90,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="Autofac, Version=2.5.2.830, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\AutoFac\Autofac.dll</HintPath>
+    <Reference Include="Autofac">
+      <HintPath>..\packages\Autofac.2.6.1.841\lib\NET35\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Configuration">
+      <HintPath>..\packages\Autofac.2.6.1.841\lib\NET35\Autofac.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="LinFu.DynamicProxy">
       <HintPath>..\packages\LinFu.DynamicProxy.OfficialRelease.1.0.5\lib\net\LinFu.DynamicProxy.dll</HintPath>
@@ -2435,6 +2438,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forecasting\Forms\ExportPages\SelectDateRange.resx">
       <DependentUpon>SelectDateRange.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forecasting\Forms\ExportPages\SelectDestination.resx">
       <DependentUpon>SelectDestination.cs</DependentUpon>
@@ -2522,6 +2526,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Meetings\Overview\ExportMeetingView.resx">
       <DependentUpon>ExportMeetingView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Meetings\Overview\MeetingOverviewFilter.resx">
       <DependentUpon>MeetingOverviewFilter.cs</DependentUpon>
