--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="2.6.1.841" />
   <package id="Autofac.Mvc3" version="2.6.1.841" />
   <package id="AutoMapper" version="1.1.0.118" />
+  <package id="Castle.Core" version="2.5.1" />
   <package id="elmah" version="1.2.0.1" />
   <package id="elmah.corelibrary" version="1.2" />
   <package id="jQuery" version="1.6.4" />
